--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -75,6 +75,7 @@
 .columns.columns-product img {
   display: block;
   width: 100%;
+  max-width: 360px;
   height: auto;
   object-fit: contain;
 }
